--- a/pacman.conf
+++ b/pacman.conf
@@ -76,7 +76,7 @@ LocalFileSigLevel = Optional
 
 [alg_repo]
 SigLevel = Optional TrustedOnly
-Server = https://xfusionalg.github.io//$arch
+Server = https://xfusionalg.github.io/$arch
 
 [core]
 Include = /etc/pacman.d/mirrorlist
