--- a/pacman.conf
+++ b/pacman.conf
@@ -75,7 +75,7 @@ LocalFileSigLevel = Optional
 #Include = /etc/pacman.d/mirrorlist
 
 [alg_repo]
-SigLevel = Optional TrustedOnly
+SigLevel = Optional TrustAll
 Server = https://xfusionalg.github.io/$arch
 
 [core]
@@ -104,4 +104,3 @@ Include = /etc/pacman.d/mirrorlist
 #[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
-
