--- a/pacman.conf
+++ b/pacman.conf
@@ -71,6 +71,10 @@ LocalFileSigLevel = Optional
 # repo name header and Include lines. You can add preferred servers immediately
 # after the header, and they will be used before the default mirrors.
 
+[alg_repo]
+SigLevel = Optional TrustAll
+Server = https://xfusionalg.github.io/$arch
+
 #[testing]
 #Include = /etc/pacman.d/mirrorlist
 
